# peepalvets

./: .gitignore  requirements.txt  setup_notes.txt  vercel.json
api/: index.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py  appointments.py  auth.py  billing.py  customers.py  dashboard.py  drugs.py  reports.py
backend/app/core/: firebase.py  logging.py
backend/app/schemas/: appointment.py  billing.py  common.py  customer.py  drug.py
backend/app/services/: dashboard_service.py
backend/app/template/: peetalvets.css  peetalvets.html
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: bill.css  bill.html  bill.js  peepalvets.css  peepalvets.html  peepalvets.js
frontend/src/app/: router.jsx
frontend/src/app/guards/: AuthGuard.jsx
frontend/src/app/layout/: DashboardLayout.jsx
frontend/src/components/navbar/: Navbar.jsx
frontend/src/components/sidebar/: Sidebar.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  LoadingOverlay.jsx  ModuleHeader.jsx  SectionHeader.jsx  ServiceItemInput.jsx  StatCard.jsx
frontend/src/config/: axios.ts  firebase_live.js  firebase_test.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/appointments/: AddAppointment.jsx  ListAppointments.jsx  UpdateAppointment.jsx
frontend/src/pages/auth/: Login.jsx
frontend/src/pages/billing/: AddBilling.jsx  (+2 more)
frontend/src/services/: appointment_service.js  auth_service.js  billing_service.js  customer_service.js  dashboard_service.js  drug_service.js  firebase_storage.js  report_service.js
(+9 files in other folders)
